--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^7.1.0",
     "@mui/styled-engine-sc": "^7.1.0",
     "@tanstack/react-query": "^5.79.0",
+    "aos": "^2.3.4",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
