--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.18",
     "yup": "^1.6.1"
   },
